--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,12 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Configuración de la base de datos (H2 en memoria para desarrollo)
-spring.application.name=demo
-spring.profiles.active=dev
+# El perfil activo se define desde Maven/Docker
+spring.profiles.active=@spring.profiles.active@
+
+# Configuración base (común a todos los perfiles)
+server.port=8080
+
+# Archivos estáticos
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.cache.period=3600
